[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/Gimmicks/FBZPylonCenter.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Gimmicks/VerticalPylon.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Gimmicks/FBZPylon.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "main"
length = 0.4
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("FBZ_Pylon_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.266667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FBZ_Pylon_Bottom:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.133333, 0.266667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FBZ_Pylon_Top:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.133333, 0.266667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 48 )

[node name="FBZ_Pylon_Controller" type="Node2D"]
script = ExtResource( 2 )

[node name="FBZ_Pylon_Sprite" type="Sprite" parent="."]
position = Vector2( 0, -65 )
texture = ExtResource( 1 )
hframes = 3
frame = 1
region_enabled = true
region_rect = Rect2( 0, 0, 48, 96 )

[node name="FBZ_Pylon_Bottom" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
hframes = 3
vframes = 2
frame = 4

[node name="FBZ_Pylon_Top" type="Sprite" parent="."]
position = Vector2( 0, -121 )
texture = ExtResource( 3 )
hframes = 3
vframes = 2
frame = 1

[node name="FBZ_Pylon_Animator" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/main = SubResource( 1 )

[node name="FBZ_Pylon_Area" type="Area2D" parent="."]
collision_layer = 8192
collision_mask = 0

[node name="FBZ_Pylon_Collision" type="CollisionShape2D" parent="FBZ_Pylon_Area"]
position = Vector2( 0, -65 )
shape = SubResource( 2 )

[connection signal="body_entered" from="FBZ_Pylon_Area" to="." method="_on_FBZ_Pylon_Area_body_entered"]
[connection signal="body_exited" from="FBZ_Pylon_Area" to="." method="_on_FBZ_Pylon_Area_body_exited"]
